feat: deploy in ngrok test domain and setup deivice android